--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="SEGUNDO PARCIAL"
+            android:text="@string/parcial"
             android:textStyle="bold"
             android:textSize="25sp"
             android:textColor="@color/black"
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="TÓPICOS AVANZADOS EN INGENIERÍA"
+            android:text="@string/materia"
             android:textStyle="bold"
             android:textSize="22sp"
             android:textColor="@color/black"
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Kevin Julian Rivera Contreras"
+            android:text="@string/nombre"
             android:textStyle="italic"
             android:textSize="20sp"
             android:textColor="@color/black"
@@ -47,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="191934"
+            android:text="@string/codigo"
             android:textStyle="italic"
             android:textSize="20sp"
             android:textColor="@color/black"
